@@ -360,10 +360,20 @@ typedef struct _ECPSVM_STAT
         total:1;
 } ECPSVM_STAT;
 
+/* THE FOLLOWING ARE C99 INITIALISATION OF THE ECPSVM INSTRUCTION STATE STRUCTURES */
+/* SINCE MSVC SEEMS TO NOT LIKE THOSE, THEY ARE REPLACED FOR THE TIME BEING        */
+#if 0
 #define ECPSVM_STAT_DCL(_name) ECPSVM_STAT _name
 #define ECPSVM_STAT_DEF(_name) ._name = { .name = ""#_name"" ,.call=0,.hit=0,.support=1,.total=0,.enabled=1,.debug=0}
 #define ECPSVM_STAT_DEFU(_name) ._name = { .name = ""#_name"" ,.call=0,.hit=0,.support=0,.total=0,.enabled=1,.debug=0}
 #define ECPSVM_STAT_DEFM(_name) ._name = { .name = ""#_name"" ,.call=0,.hit=0,.support=1,.total=1,.enabled=1,.debug=0}
+#endif
+
+/* BELOW ARE NON C99 STRUCTURE INITIALIZERS KEEP THE ABOVE IN SYNC PLEASE */
+#define ECPSVM_STAT_DCL(_name) ECPSVM_STAT _name
+#define ECPSVM_STAT_DEF(_name) { ""#_name"" ,0,0,1,1,0,0}
+#define ECPSVM_STAT_DEFU(_name) {""#_name"" ,0,0,0,1,0,0}
+#define ECPSVM_STAT_DEFM(_name) {""#_name"" ,0,0,1,1,0,1}
 
 typedef struct _ECPSVM_CMDENT
 {
